Projectas and services page committed

--- a/src/project.html
+++ b/src/project.html
@@ -67,6 +67,120 @@
     </div>
   </nav>
 <!-- NAVBAR ENDS -->
+<BR><BR><br><br><br><br>
+<div class="container-fluid projHead"align="center">Our Projects<br>___</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-4 imgPCB" align="center">
+      <img src="../public/images/pcb5.png">
+    </div>
+
+    <div class="col-sm-7">
+      <div class="container-fluid content" align="center">
+        <div class="row">
+          <div class="card">
+            <section class="card-header">
+              <div class="title" align="center">Analog and Digital Design</div>
+            </section>
+            <section class="nonSharedContent" align="left">
+              <ul>
+      			       <li> Diesel engine monitoring systems</li>
+      			       <li> Ultra sonic Load Cell</li>
+      			       <li> Smart Flow, Pressure, Temperature sensors</li>
+      		    </ul>
+
+           </section>
+         </div>
+       </div>
+
+       <div class="row">
+         <div class="card">
+           <section class="card-header">
+             <div class="title" align="center">Automotives</div>
+           </section>
+           <section class="nonSharedContent" align="left">
+             <ul>
+               <li> Vehicle Tracking Systems</li>
+               <li> AIS-140 Compliant VTS</li>
+               <li> Asset Trackers</li>
+               <li> OBD-II based VTS</li>
+               <li> CDI for Bikes</li>
+             </ul>
+          </section>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="card">
+          <section class="card-header">
+            <div class="title" align="center">Power Electronics</div>
+          </section>
+          <section class="nonSharedContent" align="left">
+            <ul>
+        			<li> 5W – 500W SPMS, LED Drivers &amp; Battery Charger</li>
+        			<li> Digital SMPS / E-Rickshaw Charger</li>
+        			<li> PSR AC-DC for LED lighting</li>
+        			<li> Digital DC-DC Converters</li>
+        			<li> Variable Output SMPS</li>
+        		</ul>
+         </section>
+       </div>
+      </div>
+
+      <div class="row">
+        <div class="card">
+          <section class="card-header">
+            <div class="title" align="center">Communication & IOT</div>
+          </section>
+          <section class="nonSharedContent" align="left">
+          <ul>
+      			<li> USB 2.0 Based filed programmer</li>
+      			<li> TCP/IP, UDP &amp; HTTP based LED Display Boards</li>
+      			<li> Wi-Fi, GPRS &amp; Zigbee Enabled LED VMS</li>
+      			<li> Bluetooth printer for Queue Management&gt;/li&gt; </li>
+          </ul>
+         </section>
+       </div>
+      </div>
+
+      <div class="row">
+        <div class="card">
+          <section class="card-header">
+            <div class="title" align="center">Embedded Controls</div>
+          </section>
+          <section class="nonSharedContent" align="left">
+            <ul>
+      			<li> Residential and Industrial RO Controllers</li>
+      			<li> Digital queue management systems</li>
+      			<li> GPS Based Digital Clock</li>
+      			<li> Smart Home controller and DCU</li>
+      			<li> Smart Switch boards for Light, Fan etc.</li>
+      		  </ul>
+          </section>
+       </div>
+      </div>
+
+      <div class="row">
+        <div class="card">
+          <section class="card-header">
+            <div class="title" align="center">LED Lighting and Display</div>
+          </section>
+          <section class="nonSharedContent" align="left">
+            <ul>
+      			<li> True color LED Video Wall controllers</li>
+      			<li> Single Color LED Matrix controllers</li>
+      			<li> RDSO SPNTC-67 True color IPIS</li>
+      			<li> RDSO SPNTC-61 Single Color IPIS</li>
+      			<li> Production line display boards</li>
+      			<li> Advance Bus Display with GPS Based Route Announcment &amp; Tracking</li>
+      		  </ul>
+         </section>
+       </div>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
@@ -101,17 +215,13 @@
 
 
 
-
-
-
-
 <!-- Plugin JavaScript -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="https://www.jqueryscript.net/demo/jQuery-Waterwheel-Carousel-Plugin/js/jquery.waterwheelCarousel.min.js"></script>
 </head>
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-<script src="public/script/script.js"></script>
+<!-- <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script> -->
+<script src="../public/script/scriptProj.js"></script>
 
 </body>
 </html>
