Projects page completed

--- a/src/service.html
+++ b/src/service.html
@@ -147,6 +147,7 @@ We provide complete Hardware solution development starting from the Block Level 
 
 <!-- Flexbox ends here -->
 
+<!-- ----------------------Footer--------------------- -->
 <footer class="pagefooter">
   <div class="row ">
     <div class="col-sm-4">
@@ -168,6 +169,7 @@ We provide complete Hardware solution development starting from the Block Level 
   </div>
 
 </footer>
+<!-- ----------------------Footer end--------------------- -->
 
 
 
