--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
       <title>EDS India</title>
 
       <!-- Stylesheets -->
-      <link rel="stylesheet" href="demo.css">
+      <link rel="stylesheet" href="styleProject.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
       <!-- Javascripts -->
@@ -26,65 +26,25 @@
 
 <body >
 
-  <div class="container">
-
-  <div class="slider-containers">
-
-    <!--effect #1 -->
-    <div class="slider-container">
-      <h2>Effect #1</h2>
-      <div class="flexbox-slider flexbox-slider-1">
-        <div class="flexbox-slide">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-1.jpg" alt="Slide Image">
-          <div class="text-block">
-            <h3>Slide #1 is here</h3>
-            <div class="text">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
-            </div>
-          </div>
-        </div>
-        <div class="flexbox-slide">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-2.jpg" alt="Slide Image">
-          <div class="text-block">
-            <h3>Slide #2 is here</h3>
-            <div class="text">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
-            </div>
-          </div>
-        </div>
-        <div class="flexbox-slide">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-3.jpg" alt="Slide Image">
-          <div class="text-block">
-            <h3>Slide #3 is here</h3>
-            <div class="text">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
-            </div>
-          </div>
-        </div>
-        <div class="flexbox-slide">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-4.jpg" alt="Slide Image">
-          <div class="text-block">
-            <h3>Slide #4 is here</h3>
-            <div class="text">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
-            </div>
-          </div>
-        </div>
-        <div class="flexbox-slide">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-9.jpg" alt="Slide Image">
-          <div class="text-block">
-            <h3>Slide #5 is here</h3>
-            <div class="text">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class="gallery">
+    <div class="item">
+      <span style="background-image:url(https://images.unsplash.com/photo-1466154714956-9f5f64682fcc?ixlib=rb-0.3.5&q=40&fm=jpg&crop=entropy&s=db23742c68ac4e331416021a2cfadfac&w=1500)"></span>
+    </div>
+    <div class="item">
+      <span style="background-image:url(https://images.unsplash.com/photo-1460400408855-36abd76648b9?ixlib=rb-0.3.5&q=50&fm=jpg&crop=entropy&s=1c9fc275d85ee05c6e64f09eff62b363&w=1500)"></span>
+    </div>
+    <div class="item">
+      <span style="background-image: url(https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-0.3.5&q=50&fm=jpg&crop=entropy&s=61282cfeed75871385c84c2a44a8e594&w=1500)"></span>
     </div>
   </div>
-</div>
-
-
+  <div class="gallery">
+    <div class="item">
+      <span style="background-image:url(https://images.unsplash.com/photo-1462726625343-6a2ab0b9f020?ixlib=rb-0.3.5&q=50&fm=jpg&crop=entropy&s=eb6506972ee7685166b2d8b649d29a1b&w=1500)"></span>
+    </div>
+    <div class="item">
+      <span style="background-image:url(https://images.unsplash.com/photo-1467173572719-f14b9fb86e5f?ixlib=rb-0.3.5&q=50&fm=jpg&crop=entropy&s=b734e103303c5965225682077ee72f86&w=1500)"></span>
+    </div>
+  </div>
 
 
 
