Career oage initiated

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <div class="container-fluid cont2a">Embedded Designs Services</div>
     <div class="container-fluid cont2b">Converting Concept To Reality</div>
     <hr>
-    <img id="bow" src="public/images/lbr.png">
+    <img id="bow" src="public/images/lbr1.png">
     <div class="container-fluid cont2c">Our Success Stories</div>
     <div class="row typing" align="center">
       <div class="col-sm-2" align="left"></div>
@@ -263,13 +263,14 @@
 </div>
 
 </div>
+
 <img src="public/images/img1.png" id="i0">
 
 <div class="section2">
 <div id="about" align="center">Who are We?</div>
 <div class="row">
-<div class="col-sm-4" align="center"><img src="public/images/pcb4.png" width="400vh" height="auto" ></div>
-<div class="col-sm-7 about_content" align="justify">
+<div class="col-sm-2 about_content" align="justify"></div>
+<div class="col-sm-8 about_content" align="justify">
 
 
 Embedded Designs Services India Pvt. Ltd. is among the 20 most promising electronics designs service provider company in India.
@@ -284,13 +285,13 @@ We at EDS India provide solutions in field of embedded electronics, power electr
 concept to the working prototypes. With an average industry experience of over 15 years our team is motivated and capable to provide robust solution for our customers and partners. We along with our partners have setups accross India thus can extend our solution at pan India levels, we at EDS India are capable to provide support to our end customers across all geographical locations in India.
 
 </div>
-<div class="col-sm-1"></div>
-</div>
+<div class="col-sm-2 about_content" align="justify"></div>
+
 
 
 
 <!-- TEAM -->
-<div class="container-fluid contCard">
+<!-- <div class="container-fluid contCard">
   <div class="row">
     <div class="head">
       <div class="inner-container">
@@ -361,7 +362,7 @@ concept to the working prototypes. With an average industry experience of over 1
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
   <!-- TEAM -->
 
@@ -371,7 +372,7 @@ concept to the working prototypes. With an average industry experience of over 1
 <div class="clients container-fluid" align="center">
 
   <div class="clientHead" align="center">Our Clients and Partners</div><hr>
-  <marquee BEHAVIOR="alternate" SCROLLAMOUNT="6" DIRECTION="down"><div class="row clt0">
+  <marquee><div class="row clt0">
     <div class="col-sm-1"></div>
     <div class="col-sm-2"><img class="partners" src="public/images/clients/22M.png"></div>
     <div class="col-sm-2"><img class="partners" src="public/images/clients/AAI.jpg"></div>
@@ -379,28 +380,10 @@ concept to the working prototypes. With an average industry experience of over 1
     <div class="col-sm-2"><img class="partners" src="public/images/clients/DAT.jpg"></div>
     <div class="col-sm-2"><img class="partners" src="public/images/clients/EEC.png"></div>
     <div class="col-sm-1"></div>
-  </div>
 </marquee>
-  <div class="row clt0">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/GEM.png"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/GMR.png"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/GVK.jpg"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/IDDS.png"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/iitm.png"></div>
-    <div class="col-sm-1"></div>
-  </div>
-  <div class="row clt0">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/IR.png"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/KMetro.jpg"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/lohia.png"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/miracle.png"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/Nippon.jpg"></div>
-    <div class="col-sm-1"></div>
-  </div>
-</div>
 
+</div>
+</div>
 <footer class="pagefooter">
   <div class="row ">
     <div class="col-sm-4">
