Career Page completed

--- a/src/career.html
+++ b/src/career.html
@@ -11,7 +11,7 @@
   <title>EDS India</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="../public/stylesheet/styleProject.css">
+  <link rel="stylesheet" href="../public/stylesheet/career.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!-- Javascripts -->
@@ -71,6 +71,49 @@
     </div>
   </nav>
   <!-- NAVBAR ENDS -->
+  <!-- ----------------------------------content------------------------ -->
+<div class="container-fluid">
+  <div class="row content" align="center">
+    <div class="col-sm-4 img"></div>
+    <div class="col-sm-8 cont">
+      <div class="head" align="center">Join Us<br><br></div>
+      <div class="card post">
+        <div class="card-header post-title" align="left"><h2>Embedded Design Engineers</h2>For designing of various Embedded solutions, with understanding of Electronics Hardware</div>
+        <div class="card-body post-content" align="left">
+          <strong>Qualification :</strong> B.E / B.Tech in Electronics<br> <strong> Experience :</strong> 0- 3 years
+          <br>
+          <strong>Requirements</strong>
+		        <ul>
+			           <li> Knowledge of C Programming</li>
+			           <li> Work Experience with ARM controllers will be added benifit</li>
+			           <li> Understanding of Electronics Hardware</li>
+			           <li> Analitical and Logical Skills</li>
+		         </ul>
+          <button class="btn apply">Apply</button>
+        </div>
+      </div>
+
+      <!-- ------------ -->
+      <div class="card post">
+        <div class="card-header post-title" align="left"><h2>Accounts Officer</h2>To manage all financial transactions, from fixed payments and variable expenses to bank deposits and budgets.</div>
+        <div class="card-body post-content" align="left">
+          <strong>Qualification :</strong> B.E / B.Tech in Electronics<br> <strong> Experience :</strong> 0- 3 years
+          <br>
+          <strong>Requirements</strong>
+		        <ul>
+			           <li> Knowledge of C Programming</li>
+			           <li> Work Experience with ARM controllers will be added benifit</li>
+			           <li> Understanding of Electronics Hardware</li>
+			           <li> Analitical and Logical Skills</li>
+		         </ul>
+          <button class="btn apply">Apply</button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+<!-- ----------------------------------content------------------------ -->
 
 <!-- ----------------------Footer--------------------- -->
 <footer class="pagefooter">
