--- a/src/service.html
+++ b/src/service.html
@@ -43,19 +43,19 @@
               <a class="nav-link js-scroll-trigger" href="#about"><b>About</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services"><b>Services</b></a>
+              <a class="nav-link js-scroll-trigger" href="service.html"><b>Services</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#products"><b>Products</b></a>
+              <a class="nav-link js-scroll-trigger" href="products.html"><b>Products</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects"><b>Projects</b></a>
+              <a class="nav-link js-scroll-trigger" href="projects.html"><b>Projects</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#news"><b>News</b></a>
+              <a class="nav-link js-scroll-trigger" href="news.html"><b>News</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#career"><b>Career</b></a>
+              <a class="nav-link js-scroll-trigger" href="career.html"><b>Career</b></a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact"><b>Contact</b></a>
