--- a/src/contact.html
+++ b/src/contact.html
@@ -46,22 +46,22 @@
               <a class="nav-link js-scroll-trigger" href="#about"><b>About</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="src/service.html"><b>Services</b></a>
+              <a class="nav-link js-scroll-trigger" href="service.html"><b>Services</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="src/products.html"><b>Products</b></a>
+              <a class="nav-link js-scroll-trigger" href="products.html"><b>Products</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="src/projects.html"><b>Projects</b></a>
+              <a class="nav-link js-scroll-trigger" href="projects.html"><b>Projects</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="src/news.html"><b>News</b></a>
+              <a class="nav-link js-scroll-trigger" href="news.html"><b>News</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="src/career.html"><b>Career</b></a>
+              <a class="nav-link js-scroll-trigger" href="career.html"><b>Career</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="src/contact.html"><b>Contact</b></a>
+              <a class="nav-link js-scroll-trigger" href="contact.html"><b>Contact</b></a>
             </li>
 
           </ul>
