--- a/src/about.html
+++ b/src/about.html
@@ -98,37 +98,34 @@
   </div>
 </div>
 <div class="container-fluid cont2">
-  <div class="row">
-    <div class="col-sm-4">
-      <img src="">
-    </div>
+  <div class="row panel1">
+    <div class="col-sm-2"></div>
     <div class="col-sm-8" align="justify">
       Our Mission is to provide robust technology solutions to our valued customers
       and securing the best position in the eyes of our customers and employees.
     </div>
+    <div class="col-sm-2"></div>
   </div>
 
-    <div class="row">
+    <div class="row panel2">
+    <div class="col-sm-2 "></div>
     <div class="col-sm-8" align="justify">
       Our Vision is to be a single source solution provider enabling our
       customers rise the ladder of success. We champion an environment of honesty,
       transparency, fairness and high moral standards.
     </div>
-    <div class="col-sm-4">
-      <img src="">
-    </div>
+  <div class="col-sm-2"></div>
   </div>
 
-  <div class="row">
-    <div class="col-sm-4">
-      <img src="">
-    </div>
+  <div class="row panel3">
+    <div class="col-sm-2"></div>
     <div class="col-sm-8" align="justify">
         We strongly believe that our success lies in the growth of our employees,
         as elucidated by our mission statement. Our team is highly motivated with
         the growing achievements of the organization, and thus each member finds
         their best version every day.
     </div>
+    <div class="col-sm-2"></div>
   </div>
 
 
