About us page added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
           <ul class="nav navbar-nav navbar-center">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about"><b>About</b></a>
+              <a class="nav-link js-scroll-trigger" href="src/about.html"><b>About</b></a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="src/service.html"><b>Services</b></a>
@@ -267,7 +267,7 @@
 <img src="public/images/img1.png" id="i0">
 
 <div class="section2">
-<div id="about" align="center">Who are We?</div>
+<!-- <div id="about" align="center">Who are We?</div>
 <div class="row">
 <div class="col-sm-2 about_content" align="justify"></div>
 <div class="col-sm-8 about_content" align="justify">
@@ -285,7 +285,7 @@ We at EDS India provide solutions in field of embedded electronics, power electr
 concept to the working prototypes. With an average industry experience of over 15 years our team is motivated and capable to provide robust solution for our customers and partners. We along with our partners have setups accross India thus can extend our solution at pan India levels, we at EDS India are capable to provide support to our end customers across all geographical locations in India.
 
 </div>
-<div class="col-sm-2 about_content" align="justify"></div>
+<div class="col-sm-2 about_content" align="justify"></div> -->
 
 
 
@@ -366,8 +366,6 @@ concept to the working prototypes. With an average industry experience of over 1
 
   <!-- TEAM -->
 
-</div>
-
 
 <div class="clients container-fluid" align="center">
 
@@ -381,7 +379,7 @@ concept to the working prototypes. With an average industry experience of over 1
     <div class="col-sm-2"><img class="partners" src="public/images/clients/EEC.png"></div>
     <div class="col-sm-1"></div>
 </marquee>
-
+</div>
 </div>
 </div>
 <footer class="pagefooter">
