--- a/src/about.html
+++ b/src/about.html
@@ -10,18 +10,8 @@
       <!-- Stylesheets -->
       <link rel="stylesheet" href="../public/stylesheet/about.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-      <!-- <link rel="stylesheet" href="../public/stylesheet/styleFlexbox.css"> -->
-
-      <!-- Compiled and minified CSS -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-
-
 
       <!-- Javascripts -->
-      <!-- Compiled and minified JavaScript -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -49,7 +39,7 @@
 
           <ul class="nav navbar-nav navbar-center">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about"><b>About</b></a>
+              <a class="nav-link js-scroll-trigger" href="about.html"><b>About</b></a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="service.html"><b>Services</b></a>
@@ -77,142 +67,190 @@
     </div>
   </nav>
 <!-- NAVBAR ENDS -->
-<div class="container-fluid cont">
-  <div class="row r0">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8" align="justify">
 
-      Embedded Designs Services India Pvt. Ltd. is among the 20 most promising electronics designs service provider company in India.
-      Travelling ahead of time, trends and burgeoning technology demand driven by its rich R&D efforts, EDS India caters to every requirement in the
-      electronics product development domain under one roof, starting right from Architecture Design to complete Hardware, Software & Mobile Apps
 
-      Embedded Designs Services India Pvt. Ltd. is a group of experienced industry veterans providing technology solutions to its partners,
-      established with the aim to enrich our valued customers with today’s growing technology demands. We offer professional design services to enable our end customers
-      to grow in this high speed techno-commercial era.
-
-      We at EDS India provide solutions in field of embedded electronics, power electronics, analog and digital design starting from the paper
-      concept to the working prototypes. With an average industry experience of over 15 years our team is motivated and capable to provide robust solution for our customers and partners. We along with our partners have setups accross India thus can extend our solution at pan India levels, we at EDS India are capable to provide support to our end customers across all geographical locations in India.
-
+<!-- Carousel -->
+<header>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <!-- Slide One - Set the background image for this slide in the line below -->
+      <div class="carousel-item active slide2" >
+        <div class="carousel-caption">
+          <p class="lead">Managing Director<br><b>Mr. Shantanu Roy</b><br>____<br>Has more than 23 years of industry experience in Project Management, Designing for Analog & Digital Circuits, Embedded Controls, Power electronics, Hardware & Software development</p>
+        </div>
+      </div>
+        <!-- Slide Two - Set the background image for this slide in the line below -->
+      <div class="carousel-item slide3">
+        <div class="carousel-caption ">
+          <p class="lead">Hardware Design<br><b>Mr. Naveen Dagar</b><br>____<br> More than 6 Years of Experience in Hardware design Mr. Naveen takes care of the Hardware development team and manages the production line helping in converting designs to reality.</p>
+        </div>
+      </div>
+        <!-- Slide Three - Set the background image for this slide in the line below -->
+      <div class="carousel-item slide1" >
+        <div class="carousel-caption ">
+          <p class="lead">Software Design<br><b>Mr. Dileep Singh</b><br>____<br>With More than 6 Years of Experience Mr. Dileep plays a key role in defining and executing the design activities. Mr. Singh is also a certified Auditor from Quality Austria for our ISO Process.</p>
+        </div>
+      </div>
+        <!-- Slide Four - Set the background image for this slide in the line below -->
+      <div class="carousel-item  slide1" >
+        <div class="carousel-caption ">
+          <p class="lead">Operations<br><b>Mr. Vijay Kumar</b><br>____<br>With 20 years of Experience in Ops and Customer support  he is a backbone to this organization. He has also worked for the Indian Railways Passenger information System.</p>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-2"></div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
   </div>
+
+  <div class="main-text">
+    <div class="col-md-12 text-center">
+        <h1>
+            Who are WE?<br>____</h1>
+        <h3>
+          <br>
+          Embedded Designs Services India Pvt. Ltd. is among the 20 most promising electronics designs service provider company in India.
+          Travelling ahead of time, trends and burgeoning technology demand driven by its rich R&D efforts, EDS India caters to every requirement in the
+          electronics product development domain under one roof, starting right from Architecture Design to complete Hardware, Software & Mobile Apps
+        </h3>
+        <div class="team">
+            <!-- <h2>Our team</h2> -->
+    </div>
 </div>
-<div class="container-fluid cont2">
-  <div class="row panel1">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8" align="justify">
-      Our Mission is to provide robust technology solutions to our valued customers
-      and securing the best position in the eyes of our customers and employees.
-    </div>
-    <div class="col-sm-2"></div>
-  </div>
+</header>
 
-    <div class="row panel2">
-    <div class="col-sm-2 "></div>
-    <div class="col-sm-8" align="justify">
-      Our Vision is to be a single source solution provider enabling our
-      customers rise the ladder of success. We champion an environment of honesty,
-      transparency, fairness and high moral standards.
-    </div>
-  <div class="col-sm-2"></div>
-  </div>
-
-  <div class="row panel3">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8" align="justify">
-        We strongly believe that our success lies in the growth of our employees,
-        as elucidated by our mission statement. Our team is highly motivated with
-        the growing achievements of the organization, and thus each member finds
-        their best version every day.
-    </div>
-    <div class="col-sm-2"></div>
-  </div>
+<!-- Carousel Ends -->
 
 
-</div>
-<!-- <div class="info container-fluid">
+
+
+<!-- <div class="section2"> -->
+<!-- <div id="about" align="center">Who are We?</div>
 <div class="row">
-  <div class="col0 col-sm-4">
-    <div class="card">
-      <div class="card-body">
-        <h2>Our Mission</h2><hr>
-        Our Mission is to provide robust technology solutions to our valued customers and securing the best position in the eyes of our customers and employees.
+<div class="col-sm-2 about_content" align="justify"></div>
+<div class="col-sm-8 about_content" align="justify">
+
+
+Embedded Designs Services India Pvt. Ltd. is among the 20 most promising electronics designs service provider company in India.
+Travelling ahead of time, trends and burgeoning technology demand driven by its rich R&D efforts, EDS India caters to every requirement in the
+electronics product development domain under one roof, starting right from Architecture Design to complete Hardware, Software & Mobile Apps
+
+Embedded Designs Services India Pvt. Ltd. is a group of experienced industry veterans providing technology solutions to its partners,
+established with the aim to enrich our valued customers with today’s growing technology demands. We offer professional design services to enable our end customers
+to grow in this high speed techno-commercial era.
+
+We at EDS India provide solutions in field of embedded electronics, power electronics, analog and digital design starting from the paper
+concept to the working prototypes. With an average industry experience of over 15 years our team is motivated and capable to provide robust solution for our customers and partners. We along with our partners have setups accross India thus can extend our solution at pan India levels, we at EDS India are capable to provide support to our end customers across all geographical locations in India.
+
+</div>
+<div class="col-sm-2 about_content" align="justify"></div> -->
+
+
+
+
+<!-- TEAM -->
+<!-- <div class="container-fluid contCard">
+  <div class="row">
+    <div class="head">
+      <div class="inner-container">
+        <div class="main">
+          <div class="front">
+            <img src="public/images/member/SROY.png" width="250px" height="auto">
+          </div>
+          <div class="back">
+
+            <div class="bio"><br>
+             Has more than 23 years of industry experience in Project Management, Designing for Analog & Digital Circuits, Embedded Controls, Power electronics, Hardware & Software development
+           </div>
+          </div>
+        </div>
+        <div class="name"><b>Managing Director<br> Mr. Santanu Roy</b></div>
       </div>
-      <div class="card-footer">
-        .
-      </div>
-
-
-    </div>
-  </div>
-
-  <div class="col0 col-sm-4" >
-  <div class="card">
-    <div class="card-body">
-      <h2>Our Vision</h2><hr>
-      Our Vision is to be a single source solution provider enabling our customers rise the ladder of success
-    </div>
-    <div class="card-footer">
-      .
     </div>
   </div>
 </div>
+<div class="container-fluid contCard">
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="inner-container">
+        <div class="main">
+          <div class="front">
+            <img src="public/images/member/naveen.png" width="250px" height="auto">
+          </div>
+          <div class="back">
+            <div class="bio"><br> More than 6 Years of Experience in Hardware design Mr. Naveen takes care of the Hardware development team and manages the production line helping in converting designs to reality.
+           </div>
 
-  <div class="col0 col-sm-4">
-    <div class="card">
-      <div class="card-body">
-        <h2>Our Values</h2><hr>
-        We strongly believe that our success lies in the growth of our employees, as elucidated by our mission statement. Our team is highly motivated with the growing achievements of the organization, and thus each member finds their best version every day.
+          </div>
+        </div>
+        <div class="name"><b>Hardware Design<br> Mr. Naveen Dagar</b></div>
       </div>
-      <div class="card-footer">
-        .
+    </div>
+    <div class="col-sm-4">
+      <div class="inner-container">
+        <div class="main">
+          <div class="front">
+            <img src="public/images/member/vijay.png" width="220px" height="auto">
+          </div>
+          <div class="back">
+
+            <div class="bio"><br> With 20 years of Experience in Ops and Customer support  he is a backbone to this organization. He has also worked for the Indian Railways Passenger information System.
+           </div>
+
+          </div>
+        </div>
+        <div class="name"><b>Operations<br> Mr. Vijay Kumar</b></div>
+      </div>
+
+    </div>
+    <div class="col-sm-4">
+      <div class="inner-container">
+        <div class="main">
+          <div class="front">
+            <img src="public/images/member/dileep.png" width="250px" height="auto">
+          </div>
+          <div class="back">
+
+            <div class="bio"><br>  With More than 6 Years of Experience Mr. Dileep plays a key role in defining and executing the design activities. Mr. Singh is also a certified Auditor from Quality Austria for our ISO Process.
+           </div>
+
+          </div>
+        </div>
+        <div class="name"><b>Software Design<br> Mr. Dileep Singh</b></div>
       </div>
     </div>
   </div>
-</div><!-- <div class="info container-fluid">
-<div class="row">
-  <div class="col0 col-sm-4">
-    <div class="card">
-      <div class="card-body">
-        <h2>Our Mission</h2><hr>
-        Our Mission is to provide robust technology solutions to our valued customers and securing the best position in the eyes of our customers and employees.
-      </div>
-      <div class="card-footer">
-        .
-      </div>
+</div> -->
+
+  <!-- TEAM -->
 
 
-    </div>
-  </div>
+<!-- <div class="clients container-fluid" align="center">
 
-  <div class="col0 col-sm-4" >
-  <div class="card">
-    <div class="card-body">
-      <h2>Our Vision</h2><hr>
-      Our Vision is to be a single source solution provider enabling our customers rise the ladder of success
-    </div>
-    <div class="card-footer">
-      .
-    </div>
-  </div>
-</div>
-
-  <div class="col0 col-sm-4">
-    <div class="card">
-      <div class="card-body">
-        <h2>Our Values</h2><hr>
-        We strongly believe that our success lies in the growth of our employees, as elucidated by our mission statement. Our team is highly motivated with the growing achievements of the organization, and thus each member finds their best version every day.
-      </div>
-      <div class="card-footer">
-        .
-      </div>
-    </div>
-  </div>
+  <div class="clientHead" align="center">Our Clients and Partners</div><hr>
+  <marquee><div class="row clt0">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/22M.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/AAI.jpg"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/Court.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/DAT.jpg"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/EEC.png"></div>
+    <div class="col-sm-1"></div>
+</marquee>
 </div>
 </div> -->
-</div> -->
-<!-- End of Device USP -->
-
+</div>
 <footer class="pagefooter">
   <div class="row ">
     <div class="col-sm-4">
@@ -249,7 +287,7 @@
 </head>
 <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-<!-- <script src="../public/script/scriptFlexbox.js"></script> -->
+<script src="public/script/script.js"></script>
 
 </body>
 </html>
