--- a/src/contact.html
+++ b/src/contact.html
@@ -43,7 +43,7 @@
 
           <ul class="nav navbar-nav navbar-center">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about"><b>About</b></a>
+              <a class="nav-link js-scroll-trigger" href="about.html"><b>About</b></a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="service.html"><b>Services</b></a>
