--- a/src/contact.html
+++ b/src/contact.html
@@ -75,22 +75,25 @@
 <div class="container-fluid">
   <div class="row content" >
     <div class="col-sm-4 img"></div>
-    <div class="col-sm-8 cont">
+    <div class="col-sm-8 cont" align="center">
       <div class="head" align="center">Contact Us<br></div>
       <br>
-      <div class="form0 row">
-        <form method="POST" action="https://formspree.io/mitra.abhirupa@gmail.com">
-          <input type="email" name="email" placeholder="Your email">
-          <textarea name="message" placeholder="Test Message"></textarea>
+      <br><br><br>
+      <br>
+      TYPE US YOUR QUERIES<br>___<br>
+      <div class="row form0" align="center">
+
+        <form id="formSpree" method="POST" action="https://formspree.io/mitra.abhirupa@gmail.com">
+          <input class="inp" type="email" name="email" placeholder="Your email"><br>
+          <textarea class="inp"  name="message" placeholder="Test Message"></textarea><br>
           <button type="submit">Send</button>
         </form>
       </div>
-      <br>
       <div class="row address" align="center">
         Embedded Designs Services India Pvt. Ltd.<br>EDS , Delhi<br>D1A/A3, Block – D1A<br>Opposite Meri College,<br>
-Janakpuri, New Delhi -110058<br>
-Tel: +91 11 45151188, Mob: + 91 9810165326<br>
-Email: info@eds-india.com<br>
+        Janakpuri, New Delhi -110058<br>
+        Tel: +91 11 45151188, Mob: + 91 9810165326<br>
+        Email: info@eds-india.com<br>
       </div>
 
       <!-- ------------ -->
